# BBoom-test

./: README.md  docker-compose.yml  pyproject.toml
bboom_test/: manage.py
bboom_test/bboom_test/: asgi.py  settings.py  urls.py  wsgi.py
bboom_test/posts/: admin.py  apps.py  models.py  tests.py  views.py
bboom_test/posts/fixtures/: demo_posts.json
bboom_test/posts/migrations/: 0001_initial.py  0002_initial.py
bboom_test/users/: admin.py  backends.py  forms.py  models.py  permissions.py  tests.py
bboom_test/users/fixtures/: demo_users.json
bboom_test/users/migrations/: 0001_initial.py
bboom_test/users/serializers/: auth.py  users.py
bboom_test/users/templates/: base.html  login_form.html  user_cabinet.html  user_posts_list.html  users_list.html
bboom_test/users/templates/admin/: custom_login.html
bboom_test/users/views/: auth.py  users.py
compose/django/: Dockerfile  start
